# SurrealFA

./: README.md  geo_enrich.py  pyproject.toml
beary/: .env.example  README.md  TASK_SPEC.md  company_discovery.json  demo_queries.py  industry_discovery.json  requirements-lock.txt  requirements.txt  test_chain.py
beary/docs/: langchain_cheatsheet.md
beary/src/agent/: build.py  shock.py  state.py  tools.py
beary/src/connectors/: polymarket_connector.py  wikidata_connector.py  yfinance_connector.py
beary/src/graph/: builder.py  db.py  queries.py  shock.py
beary/src/schema/: schema.surql
hackathon/: README.md  app.py  news_ingest.py  shock_agent.py
hackathon/src/agent/: build.py  state.py  tools.py
hackathon/src/connectors/: fmp_connector.py  sec_connector.py  tavily_connector.py  wikidata_connector.py  yfinance_connector.py
hackathon/src/graph/: builder.py  db.py
hackathon/src/schema/: apply.py  schema.surql
